--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,12 @@ li:hover .Head{
     color: gray;
 }
 
+footer{
+    color: #ccc;
+    text-align: center;
+    max-width: 100vw;
+    margin-top : 2rem;
+}
 
 /* Icon styling */
 .fa-search {
